--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,46 @@
 
                 <!--Use image thumbnails to show portfolio of work-->
                 <div class="row">
-                  <div class="col-lg-6">
-                    <div class="card mb-3" style="max-width: 540px;">
+                  <div class="col-lg-12">
+                    <div class="card mb-8">
+                      <div class="row no-gutters">
+                        <div class="col-md-4">
+                          <img src="./assets/images/COVIDTracker.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">COVID Tracker</h5>
+                            <p class="card-text">Group project that created a mobile responsive web application that allows users to search countries to see how they are dealing with and have been affected by COVID-19.</p>
+                            <p><a href="https://sziccardi1998.github.io/COVIDTracker/" target="_blank">Deployed Application</a></p><!--Link to the deployed version of the application-->
+                            <p><a href="https://github.com/sziccardi1998/COVIDTracker" target="_blank">GitHub Repository</a></p><!--Link to the application repository-->
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="card mb-8">
+                      <div class="row no-gutters">
+                        <div class="col-md-4">
+                          <img src="./assets/images/DayPlanner.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">Day Planner</h5>
+                            <p class="card-text">Web application that uses local storage to allow users to save daily tasks.</p>
+                            <p><a href="https://sziccardi1998.github.io/DayPlanner/" target="_blank">Deployed Application</a></p><!--Link to the deployed version of the application-->
+                            <p><a href="https://github.com/sziccardi1998/DayPlanner" target="_blank">GitHub Repository</a></p><!--Link to the application repository-->
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="card mb-8">
                       <div class="row no-gutters">
                         <div class="col-md-4">
                           <img src="./assets/images/COVIDTracker.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
@@ -78,80 +116,20 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                      <div class="row no-gutters">
-                        <div class="col-md-4">
-                          <img src="..." class="card-img" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                          <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-6">
-                    <div class="card mb-3" style="max-width: 540px;">
+                  <div class="col-lg-12">
+                    <div class="card mb-8">
                       <div class="row no-gutters">
                         <div class="col-md-4">
-                          <img src="..." class="card-img" alt="...">
+                          <img src="./assets/images/COVIDTracker.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
                         </div>
                         <div class="col-md-8">
                           <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">COVID Tracker</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                      <div class="row no-gutters">
-                        <div class="col-md-4">
-                          <img src="..." class="card-img" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                          <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                      <div class="row no-gutters">
-                        <div class="col-md-4">
-                          <img src="..." class="card-img" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                          <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                      <div class="row no-gutters">
-                        <div class="col-md-4">
-                          <img src="..." class="card-img" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                          <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p><a href="https://sziccardi1998.github.io/COVIDTracker/" target="_blank">Deployed Application</a></p><!--Link to the deployed version of the application-->
+                            <p><a href="https://github.com/sziccardi1998/COVIDTracker" target="_blank">GitHub Repository</a></p><!--Link to the application repository-->
                           </div>
                         </div>
                       </div>
